[gd_scene load_steps=16 format=3 uid="uid://bq1f61qv4j31k"]

[ext_resource type="Texture2D" uid="uid://dyq235tghxi0j" path="res://level/gui/menu/main_menu.png" id="1_7ftw8"]
[ext_resource type="Theme" uid="uid://pjssvnja6jwk" path="res://level/gui/theme.tres" id="1_biqm1"]
[ext_resource type="Script" path="res://level/gui/menu/MainMenu.gd" id="2_ahq7p"]
[ext_resource type="Texture2D" uid="uid://puhu7mmit7ce" path="res://level/gui/menu/main_menu_bg.png" id="4_lo56t"]
[ext_resource type="Texture2D" uid="uid://c45ytlw6gere8" path="res://entities/boss/boss_spritesheet.png" id="5_eolr6"]
[ext_resource type="Texture2D" uid="uid://gr6bopyw3q7l" path="res://level/gui/menu/press_img.png" id="6_uirok"]
[ext_resource type="Texture2D" uid="uid://dxrwuwpx3sthu" path="res://level/gui/menu/hold_img.png" id="7_sufd2"]
[ext_resource type="Texture2D" uid="uid://drqj8rjeijnux" path="res://level/gui/menu/release_img.png" id="8_spoq8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v7aqq"]
atlas = ExtResource("5_eolr6")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyds8"]
atlas = ExtResource("5_eolr6")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hythi"]
atlas = ExtResource("5_eolr6")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgwhx"]
atlas = ExtResource("5_eolr6")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x7qu"]
atlas = ExtResource("5_eolr6")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy1y0"]
atlas = ExtResource("5_eolr6")
region = Rect2(160, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_t0vgk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7aqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyds8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hythi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgwhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x7qu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy1y0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_biqm1")
script = ExtResource("2_ahq7p")

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7ftw8")

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -564.0
offset_top = -380.0
offset_right = -185.0
offset_bottom = -34.0
grow_horizontal = 0
grow_vertical = 0

[node name="PlayButton" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="HTPButton" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "How to Play"

[node name="Exit" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="HowToPlay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HowToPlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_lo56t")

[node name="Control" type="HBoxContainer" parent="HowToPlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="HowToPlay/Control"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="AnimatedSprite2D" parent="HowToPlay/Control/Control"]
position = Vector2(295, 471)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_t0vgk")
autoplay = "default"
frame_progress = 0.53841

[node name="Sprite2D" type="Sprite2D" parent="HowToPlay/Control/Control"]
position = Vector2(297, 118)
scale = Vector2(0.483654, 0.483654)
texture = ExtResource("6_uirok")

[node name="Sprite2D2" type="Sprite2D" parent="HowToPlay/Control/Control"]
position = Vector2(296, 186)
scale = Vector2(0.540929, 0.540929)
texture = ExtResource("7_sufd2")

[node name="Sprite2D3" type="Sprite2D" parent="HowToPlay/Control/Control"]
position = Vector2(295, 260)
scale = Vector2(0.473022, 0.473022)
texture = ExtResource("8_spoq8")

[node name="Control2" type="Control" parent="HowToPlay/Control"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HowToPlay/Control/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HowToPlay/Control/Control2/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HowToPlay/Control/Control2/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Another group of puny human players has come to challenge you, but not to fear, you are Boss â€“ the biggest and baddest of all Bosses. Your goal? To defeat as many of these weakling challengers as possible.

Use WASD to move Boss around. Press Q or E, then left click in a direction to activate Combo 1 or Combo 2 respectively to damage the players. A combo is made up of up to three actions, and to do each action, you must left click or hold and release the left mouse button to the beat. The timings are shown on the rhythm bar at the top, and more accurate hits means more damage! If you fail a hit, you fail the rest of the combo and become exhausted for a period of time. This means you are a crap Beat Boss.

Between rounds, you have the chance to edit your combos. Drag and drop actions from the left shelf into the combo boxes to edit them. You can also buy and upgrade new actions, or upgrade Boss to increase your health, using gold collected during rounds. Different sets of actions do different things and have different hitboxes, along with a different rhythm. In the action description, beats is the amount of beats to do the action, and cooldown is the amount of beats before the next action in the combo.

Happy beat hunting!"

[node name="BackButton" type="Button" parent="HowToPlay"]
layout_mode = 0
offset_left = 12.0
offset_top = 7.0
offset_right = 63.0
offset_bottom = 47.0
text = "  < Back   "

[connection signal="pressed" from="Main/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HTPButton" to="." method="_on_htp_button_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="HowToPlay/BackButton" to="." method="_on_back_button_pressed"]
